--- a/css/extras.css
+++ b/css/extras.css
@@ -498,5 +498,19 @@ margin-left: 41%;
     left: -1px;
 }
   
+ 
+  .elementoss{
+ 
+    margin: 0px;
+
+  }
   
 }
+
+
+.elementoss{
+margin: 30px;
+  
+}
+
+
