--- a/css/extras.css
+++ b/css/extras.css
@@ -515,6 +515,13 @@ margin-left: 41%;
     border-radius: 5%;
 }
   
+
+.section5 .container .row .col-sm.text h1 {
+    font-size: 21px;
+}
+
+
+
 }
 
 
