--- a/css/extras.css
+++ b/css/extras.css
@@ -521,7 +521,17 @@ margin-left: 41%;
 }
 
 
-
+.section5 .container .row .col-sm .jeff {
+    position: relative;
+    width: 100%;
+    height: 198px;
+    background: url(../images/person_4.jpg) no-repeat;
+    background-size: cover;
+}
+  
+  
+  
+  
 }
 
 
