--- a/css/extras.css
+++ b/css/extras.css
@@ -542,3 +542,12 @@ margin: 30px;
 }
 
 
+@media (max-width: 500px){
+.section5 .container .row .col-sm .jeff {
+    position: relative;
+    width: 100%;
+    height: 297px;
+    background: url(../images/person_4.jpg) no-repeat;
+    background-size: cover;
+}
+}
