--- a/css/extras.css
+++ b/css/extras.css
@@ -529,7 +529,17 @@ margin-left: 41%;
     background-size: cover;
 }
   
-  
+  .section4 .container .row .gallery button {
+    display: block;
+    color: #fff;
+    font-size: 20px;
+    font-weight: bold;
+    width: 61%;
+    padding: 6px;
+    background: #161e33;
+    border: 1px solid #121929;
+    margin: 20px auto;
+}
   
   
 }
@@ -550,4 +560,9 @@ margin: 30px;
     background: url(../images/person_4.jpg) no-repeat;
     background-size: cover;
 }
+  
+  .puntos {
+    margin-left: 34%;
+}
+  
 }
