--- a/css/extras.css
+++ b/css/extras.css
@@ -565,4 +565,19 @@ margin: 30px;
     margin-left: 34%;
 }
   
+  
+  .section4 .container .row .gallery button {
+    display: block;
+    color: #fff;
+    font-size: 20px;
+    font-weight: bold;
+    width: 45%;
+    padding: 6px;
+    background: #161e33;
+    border: 1px solid #121929;
+    margin: 20px auto;
+}
+  
+  
+  
 }
