--- a/css/extras.css
+++ b/css/extras.css
@@ -312,6 +312,84 @@ header .container .row .col-sm.open__{
 }
 
 
+
+
+
+/*main*/
+
+
+.main-text{
+    padding: 0px;
+}
+
+.main-text > p{
+    position: relative;
+    left: 0;
+    top: 23px;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #fd7e14;
+}
+
+.main{
+    height: 350px;
+    position: relative;
+    z-index: 5;
+    background: white;
+}
+
+.main-title{
+    width: 35%;
+}
+
+.main-body{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.main-body svg{
+    margin-left: 25px;
+}
+
+.main-footer{
+    width: 100%;
+    height: 75px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fd7e14;
+}
+
+.main-footer p{
+    margin-right: 20px;
+}
+
+.input-group{
+    width: 35%;
+    margin-left: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* footer */
 
 .contain{
