--- a/css/extras.css
+++ b/css/extras.css
@@ -735,3 +735,16 @@ margin: 30px;
   
   
 }
+
+
+media (max-width: 400px)
+.input-group>.form-control, .input-group>.form-select {
+    position: relative;
+    flex: 1 1 auto;
+    width: 1%;
+    min-width: 0;
+    font-size: 10px;
+    /* padding: 2px 2px 2px 4px; */
+    margin: 9px 0px 0px 0px;
+}
+
