--- a/css/extras.css
+++ b/css/extras.css
@@ -15,6 +15,7 @@
 .row{--bs-gutter-x:0;}
 .overplay{
   position: absolute;
+  background: #fff;
   z-index: -10;
 }
 .overplay video{
@@ -81,7 +82,7 @@ header .container .row .col-sm.open__{
   width: 100%;
 }
 .section .container{
-  padding: 60px 0;
+  padding: 22px 0;
 }
 .section .bg-1{
   position:absolute;
@@ -175,7 +176,7 @@ header .container .row .col-sm.open__{
   left: 30px;
 }
 .section2 .container .row .col-sm.x2 .oxp .boxcard{
-  margin:40px;
+  margin: 40px;
 }
 .section2 .container .row .col-sm.x2 .oxp .boxcard article{
   display: inline-block;
@@ -193,7 +194,7 @@ header .container .row .col-sm.open__{
 .section3{
   position: relative;
   width: 100%;
-  padding: 60px;
+  padding: 20px 0;
   background-color: #f5f5f5;
 }
 .section3 .container .row .col-sm.x3{
@@ -338,10 +339,6 @@ header .container .row .col-sm.open__{
     background: white;
 }
 
-.main-title{
-    width: 35%;
-}
-
 .main-body{
     display: flex;
     justify-content: space-between;
@@ -349,12 +346,12 @@ header .container .row .col-sm.open__{
 }
 
 .main-body svg{
-    margin-left: 25px;
+    margin: 6px;
 }
 
 .main-footer{
     width: 100%;
-    height: 75px;
+    height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -384,13 +381,16 @@ header .container .row .col-sm.open__{
 
 
 /* footer */
-
+@media (min-width: 1400px){
+  .contain{
+    text-align:center;
+  }
+}
 .contain{
   height:325px;
   padding-top: 50px;
-  padding-left: 150px !important;
+  max-width: 100%;
   background-color: #052c65;
-  max-width: 1600px !important;
 }
 
 .footer-text{
@@ -414,7 +414,7 @@ span{
   background-color: #031633;
   text-align: center;
   padding-top: 25px;
-  max-width: 1600px !important;
+  max-width: 100%;
 }
 
 #end a{
@@ -526,18 +526,22 @@ margin-left: 41%;
 .contain {
     height: 325px;
     padding-top: 50px;
-    padding-left: 63px !important;
     background-color: #052c65;
     max-width: 1600px !important;
 }
-
+  
   .section .container .row .xx h1 {
-    width: 60%;
-    font-size: 29px;
+    width: 100%;
+    font-size: 26px;
     font-weight: bold;
     padding: 10px;
-}
-
+} 
+  .section .bg-1{
+    background-color:#182238;
+  }
+  .section .container .row .xx .linee{
+    display:none;
+  }
   .section .container .row .reservation h1 {
     padding: 14px;
     color: #111a31;
@@ -546,8 +550,7 @@ margin-left: 41%;
 }
   
   .orange {
-    color: hsl(15deg 88% 56%);
-    font-size: 10px;
+    font-size: 16px;
 }
   
   
@@ -558,10 +561,9 @@ margin-left: 41%;
   
 
   .fw-bold {
-    font-weight: 700!important;
     width: 100%;
     text-align: center;
-    font-size: 18px;
+    font-size: 24px;
 }
   
  .section2 .container .row .col-sm.x2 .oxp {
@@ -671,37 +673,29 @@ margin: 30px;
   
 }
 
-
 @media (max-width: 900px){
- 
   .mx-5 {
-    /* margin-right: 3rem!important; */
-    margin-left: 3rem!important;
 }
-
  
   .main-text > p {
     position: relative;
     left: 0;
-    top: 23px;
+    top: 0;
     text-transform: uppercase;
     font-weight: bold;
     color: #fd7e14;
-    /* width: 20%; */
+    width: 50%;
     margin-left: 60px;
 }
 
   .fw-bolder {
-    font-weight: bolder!important;
     font-size: 20px;
 }
   
   
   .mx-5 {
-    margin-right: 3rem!important;
-    margin-left: 3rem!important;
-    width: 32%;
-    height: -15px;
+    width: 100%;
+    display: block;
 }
 
   .main-footer p {
@@ -733,10 +727,7 @@ margin: 30px;
     border-radius: 5%;
 }
   
-  
 }
-
-
 media (max-width: 400px) {
 .input-group>.form-control, .input-group>.form-select {
     position: relative;
@@ -748,13 +739,50 @@ media (max-width: 400px) {
     margin: 9px 0px 0px 0px;
 }
 }
-  
 @media (max-width: 581px){
-  
- .form-control{
-      margin: 8px 0px 0px 0px;
+.section .container{
+    padding: 0;
   }
-  
-  
+.section .container .row .reservation form {
+    background-color: white;
+  }
+ .section .container .row .xx{
+   top:0;
+   text-align: center;
+   display: none;
+   padding-bottom: 20px;
+ }
+ .navbar-light .navbar-toggler{
+  padding: 0;
+ }
+ .navbar-orange {
+  padding: 6px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  border-bottom-left-radius: 10px;
+  z-index: 99;
 }
-
+.form-control{
+  margin: 8px 0px 0px 0px;
+}
+.section2 .container .row .col-sm.x2 .oxp .boxcard{
+  margin: 30px 0;
+  text-align: center;
+}
+.section2 .container .row .col-sm.x2 .oxp .boxcard article img{
+  width: 100%;
+}
+.section3 .container .row .col-sm.x3{
+  text-align: center;
+}
+.section3 .container .row .col-sm.x4 .items article{
+  text-align: center;
+}
+.section3 .container .row .col-sm.x4 .items article .text-c{
+  width: 100%;
+}
+.container-xxl.social{
+  display: none;
+}
+}
